--- a/web.html
+++ b/web.html
@@ -5,7 +5,7 @@
 		<title>Mateo</title>
 	</head>
 	<body style="background-color:#3333FF">
-		<h1 style="font-size:35pt;color:#FFFFFF;">Mateo - meteorologická stanice GMLL</h1>
+		<h1 style="font-size:35pt;color:#FFFFFF;">Mateo - meteorologická stanice GML</h1>
 		loop
 		<a style="background-color:#FFFFFF;color:3333FF;font-size:25pt;" href="https://letkagml.space">Laetka GML</a>
 	</body>
